name:                programming-fundamentals
version:             0.1.0.0
synopsis:            Basic programming concepts in Haskell
description:         Demonstrations of fundamental programming concepts in Haskell
license:             BSD3
author:              Programming Fundamentals
maintainer:          example@example.com
category:            Education
build-type:          Simple
cabal-version:       >=1.10

executable programming-fundamentals
  main-is:             Main.hs
  other-modules:       Variables
                     , InputOutput
                     , Operators
                     , Conditionals
                     , Loops
                     , Arrays
                     , Functions
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , array
                     , containers
  default-language:    Haskell2010
  ghc-options:         -Wall